# bayescatrack

./: .gitignore  .jscpd.json  .mega-linter.yml  .pylintrc  README.md  README_track2p_pyrecest_bridge.md  pyproject.toml  test_track2p_ground_truth_eval.py  test_track2p_multisession_tracking.py  test_track2p_pyrecest_bridge.py  track2p_ground_truth_eval.py  track2p_multisession_tracking.py  track2p_pyrecest_bridge.py
.github/scripts/: run_registration_qa.py  run_track2p_benchmark.py  run_track2p_oracle_benchmark.py
.github/workflows/: bayescatrack-ci.yml  bridge-ci.yml  mega-linter.yml  tests.yml  track2p-benchmark-comparison.yml  track2p-benchmark-include-non-cells.yml  (+7 more)
tests/: test_bayescatrack_core.py  test_bayescatrack_layout.py  test_calibrated_covariance_features.py  test_calibration_diagnostics.py  test_calibration_hard_negatives.py  test_calibration_metrics.py  test_complete_track_scores.py  test_fov_registration.py  test_fov_registration_layout.py  test_global_assignment_ablation.py  test_growth_analysis.py  test_loso_calibration.py  test_mahalanobis_centroid_distance.py  test_multisession_tracking.py  test_pyrecest_global_assignment.py  test_reference.py  test_registration.py  test_registration_qa_report.py  test_registration_transform_cli.py  test_track2p_benchmark.py  test_track2p_cost_sweep.py  test_track2p_ground_truth_eval.py  test_track2p_input_validator.py  test_track2p_matching.py  test_track2p_pyrecest_bridge.py  test_track2p_raw_benchmark_data.py  test_track2p_registration.py  test_track2p_roi_index_audit.py  test_track_error_ledger.py
(+46 files in other folders)
